try jquery solution to fix usability error resulting from fixed position of body when user taps into input field on mobile device

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -29,3 +29,6 @@
 	right: 20px;
 }
 
+body .fixfixed {
+    position: absolute;
+}
